{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "c4ecdc37-bcef-458d-8240-e4ca008df746",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "c1a87d82-4289-42e8-8ed0-e1a6b30a7ef8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPress",
                    "type": "Value",
                    "id": "8d8b2686-b678-446d-8237-a1f45face705",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerDelta",
                    "type": "Value",
                    "id": "48048af2-fc79-412a-b805-e52163718004",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9101b4dd-e367-4ff0-b01c-91e3d281fde5",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f75b115c-6ac9-4fa4-893e-1521f4f3d431",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "839faca9-609b-40bf-8790-fedfe310f1b0",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}